--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
+    "shadcn": "^3.5.0",
     "tailwindcss": "^4.1.17",
     "tsx": "^4.20.6",
     "typescript": "~5.9.3",
